# lovelace

./: .gitignore  CMakeLists.txt  README.md
include/lov/: attr.h  common.h  debug.h  dict.h  keywords.gperf  lexer.h  tokens.h
lov_samples/: datatypes.lov  hello.lov
src/: lexer.c  lxI_stack.c  lx_stack.c  main.c  perf_kw_hash.c
